getting ready for 0.3.2 release: i18n files and packaging files

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,62 +1,80 @@
 # List of source files containing translatable strings
 # so far it contains all source files but the ones for testing
 
+src/gui/gui.glade
+src/gui/dialog_about.cpp 
+src/gui/dialog_about.h 
+src/gui/dialog_newgame.cpp 
+src/gui/dialog_newgame.h 
+src/gui/dialog_newgame_widget.h 
+src/gui/dialog_newgame_widget_1v1.cpp 
+src/gui/dialog_newgame_widget_1v1.h 
+src/gui/dialog_newgame_widget_4players.cpp 
+src/gui/dialog_newgame_widget_4players.h 
+src/gui/dialog_newgame_widget_challenge.cpp 
+src/gui/dialog_newgame_widget_challenge.h 
+src/gui/dialog_newgame_widget_totalallocation.cpp 
+src/gui/dialog_newgame_widget_totalallocation.h 
+src/gui/drawing_area_board.h 
+src/gui/drawing_area_board.cpp 
+src/gui/drawing_area_show_pieces.cpp 
+src/gui/drawing_area_show_pieces.h   
+src/gui/game_1v1_config.cpp 
+src/gui/game_1v1_config.h 
+src/gui/game_1v1_config_dialog.cpp 
+src/gui/game_1v1_config_dialog.h 
+src/gui/game_1v1_widget.cpp 
+src/gui/game_1v1_widget.h 
+src/gui/game_4players_config.cpp 
+src/gui/game_4players_config.h 
+src/gui/game_4players_widget.cpp 
+src/gui/game_4players_widget.h 
+src/gui/game_challenge_config.cpp 
+src/gui/game_challenge_config.h 
+src/gui/game_challenge_widget.cpp 
+src/gui/game_challenge_widget.h 
+src/gui/game_total_allocation_config.cpp 
+src/gui/game_total_allocation_config.h 
+src/gui/game_total_allocation_widget.cpp 
+src/gui/game_total_allocation_widget.h 
+src/gui/glade_defs.h 
+src/gui/gui_exception.cpp 
+src/gui/gui_exception.h 
+src/gui/main_window.cpp 
+src/gui/main_window.h 
+src/gui/main_window_worker_thread.cpp 
+src/gui/main_window_worker_thread.h 
+src/gui/statusbar_game.cpp 
+src/gui/statusbar_game.h 
+src/gui/table_edit_piece.cpp 
+src/gui/table_edit_piece.h   
+src/gui/stop_watch_label.cpp 
+src/gui/stop_watch_label.h 
 src/impl/board_impl.h 
-src/impl/coordinate_impl.h
+src/impl/coordinate_impl.h 
 src/impl/g_blocking_queue_impl.h 
 src/impl/game1v1_impl.h 
 src/impl/piece_impl.h 
 src/impl/player_impl.h 
 src/bitwise.cpp 
 src/bitwise.h 
-src/blockem_challenge.cpp
-src/blockem_challenge.h
-src/blockem_config.cpp
-src/blockem_config.h
+src/blockem_challenge.cpp 
+src/blockem_challenge.h 
+src/blockem_config.cpp 
+src/blockem_config.h 
 src/board.cpp 
 src/board.h 
 src/coordinate.h 
 src/coordinate_set.h 
 src/game1v1.cpp 
 src/game1v1.h 
-src/game_challenge.cpp
-src/game_challenge.h
+src/game_4players.cpp 
+src/game_4players.h 
+src/game_challenge.cpp 
+src/game_challenge.h 
 src/game_total_allocation.cpp 
 src/game_total_allocation.h 
-src/g_blocking_queue.h
-src/gui_dialog_about.cpp 
-src/gui_dialog_about.h 
-src/gui_dialog_newgame.cpp
-src/gui_dialog_newgame.h
-src/gui_drawing_area_board.h 
-src/gui_drawing_area_board.cpp 
-src/gui_drawing_area_show_pieces.cpp 
-src/gui_drawing_area_show_pieces.h   
-src/gui_exception.cpp 
-src/gui_exception.h 
-src/gui_game1v1_config.cpp 
-src/gui_game1v1_config.h 
-src/gui_game1v1_config_dialog.cpp
-src/gui_game1v1_config_dialog.h
-src/gui_game1v1_widget.cpp
-src/gui_game1v1_widget.h
-src/gui_game_challenge_widget.cpp
-src/gui_game_challenge_widget.h
-src/gui_game_total_allocation_config.cpp
-src/gui_game_total_allocation_config.h
-src/gui_game_total_allocation_widget.cpp
-src/gui_game_total_allocation_widget.h
-src/gui_glade_defs.h 
-src/gui_main_window.cpp 
-src/gui_main_window.h 
-src/gui_main_window_worker_thread.cpp 
-src/gui_main_window_worker_thread.h 
-src/gui_statusbar_game.cpp
-src/gui_statusbar_game.h
-src/gui_stop_watch_label.cpp
-src/gui_stop_watch_label.h
-src/gui_table_edit_piece.cpp
-src/gui_table_edit_piece.h
+src/g_blocking_queue.h 
 src/heuristic.cpp 
 src/heuristic.h 
 src/piece.cpp 
@@ -67,4 +85,4 @@ src/rules.cpp
 src/rules.h 
 src/singleton.h 
 src/main.cpp
-src/gui.glade
+
