--- a/config.h.in
+++ b/config.h.in
@@ -15,6 +15,9 @@
 /* gettext package */
 #undef GETTEXT_PACKAGE
 
+/* git commit SSH */
+#undef GIT_COMMIT
+
 /* Define to 1 if you have `alloca', as a function or macro. */
 #undef HAVE_ALLOCA
 
@@ -279,9 +282,6 @@
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
-
-/* SVN Revision */
-#undef SVN_REVISION
 
 /* Define if the POSIX multithreading library can be used. */
 #undef USE_POSIX_THREADS
